// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseForm correctly 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Amount"
    type="text"
    value=""
  />
  <DatePicker
    calendarIcon={
      <svg
        className="react-date-picker__calendar-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="15"
          width="15"
          x="2"
          y="2"
        />
        <line
          x1="6"
          x2="6"
          y1="0"
          y2="4"
        />
        <line
          x1="13"
          x2="13"
          y1="0"
          y2="4"
        />
      </svg>
    }
    clearIcon={
      <svg
        className="react-date-picker__clear-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="15"
          y1="4"
          y2="15"
        />
        <line
          x1="15"
          x2="4"
          y1="4"
          y2="15"
        />
      </svg>
    }
    closeCalendar={true}
    isOpen={null}
    onChange={[Function]}
    openCalendarOnFocus={true}
    returnValue="start"
    value={1969-12-31T23:00:00.000Z}
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add a note for your expense (optional)"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Expense
    </button>
  </div>
</form>
`;

exports[`should render ExpenseForm correctly with expense data 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value="Rent"
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Amount"
    type="text"
    value="1095"
  />
  <DatePicker
    calendarIcon={
      <svg
        className="react-date-picker__calendar-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="15"
          width="15"
          x="2"
          y="2"
        />
        <line
          x1="6"
          x2="6"
          y1="0"
          y2="4"
        />
        <line
          x1="13"
          x2="13"
          y1="0"
          y2="4"
        />
      </svg>
    }
    clearIcon={
      <svg
        className="react-date-picker__clear-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="15"
          y1="4"
          y2="15"
        />
        <line
          x1="15"
          x2="4"
          y1="4"
          y2="15"
        />
      </svg>
    }
    closeCalendar={true}
    isOpen={null}
    onChange={[Function]}
    openCalendarOnFocus={true}
    returnValue="start"
    value={1969-12-27T23:00:00.000Z}
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add a note for your expense (optional)"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Expense
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 1`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Amount"
    type="text"
    value=""
  />
  <DatePicker
    calendarIcon={
      <svg
        className="react-date-picker__calendar-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="15"
          width="15"
          x="2"
          y="2"
        />
        <line
          x1="6"
          x2="6"
          y1="0"
          y2="4"
        />
        <line
          x1="13"
          x2="13"
          y1="0"
          y2="4"
        />
      </svg>
    }
    clearIcon={
      <svg
        className="react-date-picker__clear-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="15"
          y1="4"
          y2="15"
        />
        <line
          x1="15"
          x2="4"
          y1="4"
          y2="15"
        />
      </svg>
    }
    closeCalendar={true}
    isOpen={null}
    onChange={[Function]}
    openCalendarOnFocus={true}
    returnValue="start"
    value={1969-12-31T23:00:00.000Z}
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add a note for your expense (optional)"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Expense
    </button>
  </div>
</form>
`;

exports[`should render error for invalid form submission 2`] = `
<form
  className="form"
  onSubmit={[Function]}
>
  <p
    className="form__error"
  >
    Please provide description and amount.
  </p>
  <input
    autoFocus={true}
    className="text-input"
    onChange={[Function]}
    placeholder="Description"
    type="text"
    value=""
  />
  <input
    className="text-input"
    onChange={[Function]}
    placeholder="Amount"
    type="text"
    value=""
  />
  <DatePicker
    calendarIcon={
      <svg
        className="react-date-picker__calendar-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          fill="none"
          height="15"
          width="15"
          x="2"
          y="2"
        />
        <line
          x1="6"
          x2="6"
          y1="0"
          y2="4"
        />
        <line
          x1="13"
          x2="13"
          y1="0"
          y2="4"
        />
      </svg>
    }
    clearIcon={
      <svg
        className="react-date-picker__clear-button__icon react-date-picker__button__icon"
        height={19}
        stroke="black"
        strokeWidth={2}
        viewBox="0 0 19 19"
        width={19}
        xmlns="http://www.w3.org/2000/svg"
      >
        <line
          x1="4"
          x2="15"
          y1="4"
          y2="15"
        />
        <line
          x1="15"
          x2="4"
          y1="4"
          y2="15"
        />
      </svg>
    }
    closeCalendar={true}
    isOpen={null}
    onChange={[Function]}
    openCalendarOnFocus={true}
    returnValue="start"
    value={1969-12-31T23:00:00.000Z}
  />
  <textarea
    className="textarea"
    onChange={[Function]}
    placeholder="Add a note for your expense (optional)"
    value=""
  />
  <div>
    <button
      className="button"
    >
      Save Expense
    </button>
  </div>
</form>
`;
